--- a/server/.env
+++ b/server/.env
@@ -2,12 +2,11 @@
 PORT=5000
 
 # Database Configuration
-MONGODB_URI=mongodb://localhost:27017/task-management
-# Atlas URI (commented out)
-# MONGODB_URI=mongodb+srv://kaustubhkumbharkar0601_db_user:Blj9owChpqdlNvUW@cluster0.rapfno3.mongodb.net/task-management?retryWrites=true&w=majority&authSource=admin
+# MONGODB_URI=mongodb://localhost:27017/task-management
+MONGODB_URI=mongodb+srv://kaustubhkumbharkar0601_db_user:NPppYpUbppcKcNwi@cluster0.jsihg3t.mongodb.net/
 
 # JWT Secret (You should change this to a secure random string)
 JWT_SECRET=your-super-secure-jwt-secret-key-2024-task-management-system-12345
 
 # Environment
-NODE_ENV=development
+# NODE_ENV=development
