--- a/server/.env
+++ b/server/.env
@@ -3,10 +3,13 @@ PORT=5000
 
 # Database Configuration
 # MONGODB_URI=mongodb://localhost:27017/task-management
-MONGODB_URI=mongodb+srv://kaustubhkumbharkar0601_db_user:NPppYpUbppcKcNwi@cluster0.jsihg3t.mongodb.net/
+MONGODB_URI=mongodb+srv://kaustubhkumbharkar0601_db_user:NPppYpUbppcKcNwi@cluster0.jsihg3t.mongodb.net/task-management?retryWrites=true&w=majority
 
 # JWT Secret (You should change this to a secure random string)
 JWT_SECRET=your-super-secure-jwt-secret-key-2024-task-management-system-12345
 
+# Frontend URL (for CORS)
+FRONTEND_URL=https://task-management-wiix.vercel.app
+
 # Environment
-# NODE_ENV=development
+NODE_ENV=production
